# strawframework

./: .gitignore  CMakeLists.txt  CMakeLists_base.txt  README.md
include/base/: StrawUtils.h
include/base/data/: Array.h  Buffer.h  Data.h  NumericSerializable.h  Serializable.h
include/base/def/: FrameworkDef.h  PlatformDefine-linux.h  PlatformDefine-win32.h  PlatformDefine.h
include/base/file/: FileUtils.h
include/base/listener/: ListenerBinder.h  ListenerList.h
include/base/log/: StrawLog.h
include/base/loop/: HandlerThread.h  Looper.h  MessageLooper.h  TaskScheduler.h
include/base/ptr/: RefPtr.h  RefPtrObject.h  weak_ptr.h
include/base/timer/: Timer.h
include/graphics/: GraphicsDeclare.h
include/graphics/app/: BaseApplication.h  BaseManager.h  DeclareHelper.h  (+4 more)
lib/: tinyxml2.lib
src/com.straw.DemoPlugin/: DemoPluginApplication.cc  DemoPluginApplication.h  MainLayoutExtAgent.cc  MainLayoutExtAgent.h  main.cc
src/demo/: CMakeLists.txt  main.cc
src/plugingenerator/: CMakeLists.txt  main.cc
src/respacker/: CMakeLists.txt  ResNodeInfoCollector.cpp  ResNodeInfoCollector.h  main.cpp
src/strawbase/: CMakeLists.txt
src/strawbase/base/: StrawUtils.cc
src/strawbase/data/: Array.cc  Buffer.cc  Data.cc  Serizlizable.cc
src/strawbase/file/: FileUtils.cc
src/strawbase/impls/win/: WindowsTimerImpl.cc  WindowsTimerImpl.h
src/strawbase/log/: StrawLog.cc
src/strawbase/loop/: HandlerThread.cc  Looper.cc  MessageLooper.cc  ThreadLooper.h
src/strawbase/timer/: Timer.cc  TimerImpl.cc  TimerImpl.h
src/strawgraphics/: CMakeLists.txt  GraphicsDeclare.cc
(+173 files in other folders)
